--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,68 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-5">
+      <h4 class="p-4">ショッピングカート</h4>
+    </div>
+    <div class="col-5">
+      <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, class: 'btn btn-danger' %>
+    </div>
+  </div>
+
+  <div class="row pt-3">
+    <div class="col-9 offset-1">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <td>商品名</td>
+          <td>単価(税込)</td>
+          <td>数量</td>
+          <td>小計</td>
+          <td></td>
+        </tr>
+      </thead>
+
+
+      <tbody>
+        <% @cart_items.each do |item| %>
+        <tr>
+          <th>
+            <%= image_tag item.get_item_image(50, 50) %>
+            <%= item.name %>
+          </th>
+          <th>
+            <%= @price %>
+          </th>
+          <th>
+            <%= form_with model: @item, url:cart_item_path, method: :patch do |f| %>
+              <%= f.select :amount, *[1..5] %>
+              <%= f.submit "変更", cart_items_path, class: 'btn btn-success' %>
+            <% end %>
+          </th>
+          <th><%= @price * item.amount %></th>
+          <th>
+            <%= link_to "削除する", cart_item_path(item), method: :delete, class: 'btn btn-danger' %>
+          </th>
+        </tr>
+        <% end %>
+        <tr>
+          <th>
+            <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %>
+          </th>
+          <th></th>
+          <th></th>
+          <th>合計金額</th>
+          <th></th>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+
+  <div class="row m-5">
+    <div class="col-4 offset-4">
+      <%= link_to "情報入力に進む", new_order_path(@customer), class: 'btn btn-success' %>
+    </div>
+  </div>
+
+</div>
