--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,27 +1,32 @@
 <div class="container">
   <div class="row">
-    <div class="col-2">
+    <div class="col-2 pt-3">
       <%= render 'public/left_contents' %>
     </div>
-    
-    <div class="col-8 offset-1">
+
+    <div class="col-3 p-4">
       <div>
         <%= image_tag @item.get_item_image(200, 200) %>
       </div>
-      <div>
-        <%= @item.name %>
-      </div>
-      <div>
-        <%= @item.introduction %>
-      </div>
-      <div>
+    </div>
+    <div class="col-7 p-5">
+      <%= form_with url:cart_items_path, method: :post do |f| %>
+
+      <h3 class="mb-2"><%= @item.name %></h3>
+      <h5 class="p-2"><%= @item.introduction %></h5>
+      <div class="pl-2">
         <%= @item.price*1.1 %>(税込)
       </div>
-      <div>個数選択</div>
-      
-      <div>
-      <%= link_to "カートに入れる", cart_items_path(@customer), class: 'btn btn-success' %>
+      <div class="pl-2">
+        <%= f.hidden.field @cart_item, :value => :item.id %>
+        <%= f.select :amount, *[1..5] %>
       </div>
+
+      <div>
+      <%= f.submit "カートに入れる", cart_items_path(@customer), class: 'btn btn-success' %>
+      </div>
+
+      <% end %>
     </div>
   </div>
 </div>
