--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -13,46 +13,46 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <td>商品名</td>
-          <td>単価(税込)</td>
-          <td>数量</td>
-          <td>小計</td>
-          <td></td>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
         </tr>
       </thead>
 
 
       <tbody>
-        <% @cart_items.each do |item| %>
+        <% @cart_items.each do |cart_item| %>
         <tr>
-          <th>
-            <%= image_tag item.get_item_image(50, 50) %>
-            <%= item.name %>
-          </th>
-          <th>
-            <%= @price %>
-          </th>
-          <th>
+          <td>
+            <%= image_tag cart_item.get_item_image(50, 50) %>
+            <%= cart_item.name %>
+          </td>
+          <td>
+            <%= cart_item.item.with_tax_price %>
+          </td>
+          <td>
             <%= form_with model: @cart_item, url:cart_item_path, method: :patch do |f| %>
               <%= f.select :amount, *[1..5] %>
               <%= f.submit "変更", class: 'btn btn-success' %>
             <% end %>
-          </th>
-          <th><%= @price * item.amount %></th>
-          <th>
+          </td>
+          <td><%= cart_item.subtotal %></td>
+          <td>
             <%= link_to "削除する", cart_item_path(item), method: :delete, class: 'btn btn-danger' %>
-          </th>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %>
+          </td>
+          <td></td>
+          <td></td>
+          <td>合計金額</td>
+          <td><% @合計金額 += cart_item.subtotal %></td>
         </tr>
         <% end %>
-        <tr>
-          <th>
-            <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %>
-          </th>
-          <th></th>
-          <th></th>
-          <th>合計金額</th>
-          <th></th>
-        </tr>
       </tbody>
       
     </table>
