--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-5">
+    <div class="col-8">
       <h4 class="p-4">ショッピングカート</h4>
     </div>
-    <div class="col-5">
+    <div class="col-3 p-4">
       <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, class: 'btn btn-danger' %>
     </div>
+    <div class="col-1"></div>
   </div>
 
   <div class="row pt-3">
