--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -3,7 +3,7 @@
     <h4 class="p-4">注文情報確認</h4>
   </div>
   
-  <%= form_with model: @order, url:orders_path(@customer), method: :post do |f| %>
+  <%= form_with model: @order, url:orders_path, method: :post do |f| %>
   
   <!--カート情報-->
   <div class="row">
@@ -53,7 +53,6 @@
       <h5>支払方法</h5>
     </div>
     <div class="col-9">
-      <%= 
     </div>
   </div>
   
