--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,80 +3,80 @@
     <h4 class="p-4">注文情報入力</h4>
   </div>
 
-  <%= form_with model: @order, url:orders_confirm_path(@customer), method: :post, local: true do |f| %>
-  
+  <%= form_with model: @order, url:orders_confirm_path do |f| %>
+
     <div class="row">
       <div class="col-10 offset-1">
-      <h5>支払い方法</h5>
-      <div>
-        <!--%= f.hidden_field :payment_method, value => @payment_method.id %>-->
-        <div class="pl-3">
-          <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-          <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+        <h5>支払い方法</h5>
+        <div>
+          <!--%= f.hidden_field :payment_method, value => @payment_method.id %>-->
+          <div class="pl-3">
+            <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+            <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+          </div>
+      
+          <div class="pl-3">
+            <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+            <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer] %>
+          </div>
         </div>
-        
-        <div class="pl-3">
-          <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-          <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer] %>
-        </div>
-      </div>
       </div>
       <div class="col-1"></div>
     </div>
-    
+
     <div class="row mt-3 mb-4">
       <div class="col-10 offset-1">
-      <h5>お届け先</h5>
-      <!--自分の住所-->
-      <div class="pl-3">
-        <%= f.radio_button :address_id, "0" %>
-        <%= f.label :address_id_0, "ご自身の住所" %>
-        <div class="pl-5 pb-2">
-        〒<%= @customer.post_code %>
-          <%= @customer.address %>
-          <%= @customer.last_name %><%= @customer.first_name %>
+        <h5>お届け先</h5>
+        <!--自分の住所-->
+        <div class="pl-3">
+          <%= f.radio_button :address_id, "0" %>
+          <%= f.label :address_id, "ご自身の住所" %>
+          <div class="pl-5 pb-2">
+          〒<%= @customer.post_code %>
+            <%= @customer.address %>
+            <%= @customer.last_name %><%= @customer.first_name %>
+          </div>
         </div>
-      </div>
 
-      <!--登録先住所-->
-      <div class="pl-3">
-        <%= f.radio_button :address_id, "1" %>
-        <%= f.label :address_id_1, "登録済み住所から選択" %>
-        <div class="ml-5 mb-3">
-        <%= f.select :address_id_1, options_from_collection_for_select(Address.all, :id, :address_display) %>
+        <!--登録先住所-->
+        <div class="pl-3">
+          <%= f.radio_button :address_id, "1" %>
+          <%= f.label :address_id, "登録済み住所から選択" %>
+          <div class="ml-5 mb-3">
+          <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+          </div>
         </div>
-      </div>
 
-      <!--新規登録住所-->
-      <div class="pl-3">
-        <%= f.radio_button :address_id, "2" %>
-        <%= f.label :address_id_2, "新しいお届け先" %>
-        <%= form_with model: @address, url:addresses_path(@customer), method: :post do |address| %>
+        <!--新規登録住所-->
+        <div class="pl-3">
+          <%= f.radio_button :address_id, "2" %>
+          <%= f.label :address_id_2, "新しいお届け先" %>
+         
           <div class="pl-5">
             郵便番号(ハイフンなし)
-            <%= address.text_field :post_code, placeholder: "0000000",class: 'ml-2' %>
+            <%= f.text_field :new_post_code, placeholder: "0000000",class: 'ml-2' %>
           </div>
           <div class="pl-5">
             住所
-            <%= address.text_field :address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'ml-5' %>
+            <%= f.text_field :new_address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'ml-5' %>
           </div>
           <div class="pl-5">
             宛名
-            <%= address.text_field :name, placeholder: "令和道子", class: 'ml-5' %>
+            <%= f.text_field :new_name, placeholder: "令和道子", class: 'ml-5' %>
           </div>
-        <% end %>
-      </div>
+
+        </div>
       </div>
       <div class="col-1"></div>
     </div>
-    
+
     <div class="row m-2">
       <div class="col-2 offset-5">
       <%= f.submit "確認画面へ進む", class: 'btn btn-primary' %>
       </div>
       <div class="col-5"></div>
     </div>
-    
+
   <% end %>
-  
+
 </div>
