--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -14,7 +14,7 @@
             <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
             <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
           </div>
-      
+
           <div class="pl-3">
             <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
             <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer] %>
@@ -29,7 +29,7 @@
         <h5>お届け先</h5>
         <!--自分の住所-->
         <div class="pl-3">
-          <%= f.radio_button :address_id, "0" %>
+          <%= f.radio_button :address_id, 0 %>
           <%= f.label :address_id, "ご自身の住所" %>
           <div class="pl-5 pb-2">
           〒<%= @customer.post_code %>
@@ -40,7 +40,7 @@
 
         <!--登録先住所-->
         <div class="pl-3">
-          <%= f.radio_button :address_id, "1" %>
+          <%= f.radio_button :address_id, 1 %>
           <%= f.label :address_id, "登録済み住所から選択" %>
           <div class="ml-5 mb-3">
           <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
@@ -49,9 +49,10 @@
 
         <!--新規登録住所-->
         <div class="pl-3">
-          <%= f.radio_button :address_id, "2" %>
-          <%= f.label :address_id_2, "新しいお届け先" %>
-         
+          <!--%= f.hidden_field :address_id, :value => @address.id %>-->
+          <%= f.radio_button :address_id, 2 %>
+          <%= f.label :address_id, "新しいお届け先" %>
+
           <div class="pl-5">
             郵便番号(ハイフンなし)
             <%= f.text_field :new_post_code, placeholder: "0000000",class: 'ml-2' %>
