--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -24,7 +24,8 @@
           <tr>
             <td>
               <span class="mx-2"><%= image_tag cart_item.item.get_item_image(50, 50) %></span>
-              <%= cart_item.item.name %></td>
+              <%= cart_item.item.name %>
+            </td>
             <td><%= cart_item.item.with_tax_price %></td>
             <td><%= cart_item.amount %></td>
             <td><%= cart_item.subtotal %></td>
