--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,7 +17,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @order.each do |order| %>
+          <% @orders.each do |order| %>
           <tr>
             <td><%= order.created_at %></td>
             <td>
@@ -25,9 +25,10 @@
               <div><%= order.delivery_address %></div>
               <div><%= order.delivery_name %></div>
             </td>
-            <td><%= order.order_detail.item_id %></td>
+            <td><!--%= order.order_details.item_id.name %--></td>
             <td><%= order.total_payment %></td>
-            <td><%= link_to "表示する", order_path(order), class: 'btn btn-primaty' %></td>
+            <td></td>
+            <td><%= link_to "表示する", order_path(order), class: 'btn btn-primary' %></td>
           </tr>
           <% end %>
         </tbody>
