--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,7 +5,7 @@
       <%= render 'public/left_contents' %>
     </div>
 
-    <div class="col-8 offset-1">
+    <div class="col-9">
       <div>
         <div class=" py-5 text-center">
           ようこそ、ながのCAKEへ！<br>
@@ -14,16 +14,30 @@
           購入には会員登録が必要になります。
         </div>
       </div>
-
-      <h2 class="my-3">新着商品</h2>
-        <!--
-          % @items.each do |item| %>
-
-          % end %>
-        -->
     </div>
-
+    <div class="col-1"></div>
   </div>
+
+  <div class="row">
+    <div class="col-2 offset-2">
+      <h2 class="my-3">新着商品</h2>
+    </div>
+    <div class="col-10"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-2"></div>
+      <% @items.each do |item| %>
+        <div class="col-2">
+          <%= link_to item_path(item) do %>
+            <%= image_tag item.get_item_image(150,150) %>
+          <% end %>
+          <div><%= item.name %></div>
+          <div>￥<%= item.with_tax_price %></div>
+        </div>
+      <% end %>
+  </div>
+
 </div>
 
 
