--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <!--header-->
   <header>
-    <nav class="bg-secondary">
+    <nav class="bg-dark">
       <div class="container">
 
         <div class="row">
@@ -140,8 +140,8 @@
 
 <!--footer-->
   <footer>
-    <div class="bg-secondary">
-      <div class="footer"></div>
+    <div class="footer bg-dark">
+      <!--<div class="footer"></div>-->
     </div>
   </footer>
 
