--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
-  <div class="row">
 
+  <div class="row">
+<!--left-->
     <div class="col-2 mt-5">
       <%= render 'public/left_contents', genres: @genres %>
     </div>
 
+<!--right-->
     <div class="col-9">
       <div class="mt-5 pt-5">
         <div class="d-flex align-items-center justify-content-center">
@@ -20,6 +22,8 @@
     <div class="col-1"></div>
   </div>
 
+
+<!--right-new-items-->
   <div class="row">
     <div class="col-2 offset-2">
       <h2 class="my-3">新着商品</h2>
@@ -28,9 +32,10 @@
   </div>
 
   <div class="row">
-    <div class="col-2"></div>
+    <div class="col-1"></div>
+    <div class="col-1 bg-light"></div>
       <% @items.each do |item| %>
-        <div class="col-2 m-3">
+        <div class="col-2 py-4 bg-light">
           <%= link_to item_path(item) do%>
             <div class="mr-2"><%= image_tag item.get_item_image(200,200) %></div>
           <% end %>
@@ -38,7 +43,8 @@
           <div>￥<%= item.with_tax_price %></div>
         </div>
       <% end %>
-    <div class="col-2"></div>
+    <div class="col-1 bg-light"></div>
+    <div class="col-1"></div>
   </div>
 
 </div>
